# django_celery_boilerplate

./: .dockerignore  .env_template  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg  uwsgi.ini
django_celery_boilerplate/: celery.py  settings.py  urls.py  wsgi.py
